--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Notatniczek</title>
+    <title>Notnik - When you have to write it down</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
