Lower width of settings modal and entries in mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#222220" />
     <link href="https://fonts.googleapis.com/css?family=Baloo|Montserrat:400,700" rel="stylesheet">
-    <title>Notnik</title>
+    <title>Notnik - A simple journal app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
