--- a/public/template.html
+++ b/public/template.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <meta name="theme-color" content="#2C2C2A" />
+        <meta name="apple-mobile-web-app-status-bar" content="#2C2C2A" />
+        <link rel="apple-touch-icon" href="./icons/icon-96x96.png" />
+        <link rel="manifest" href="manifest.json" />
         <title>Notnik - A simple journal app</title>
     </head>
     <body>
