--- a/public/template.html
+++ b/public/template.html
@@ -5,7 +5,7 @@
         <meta
             http-equiv="Content-Security-Policy"
             content="default-src *;
-   img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
+   img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
    style-src  'self' 'unsafe-inline' *"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
